update maven  pom xml