@@ -64,13 +64,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.22.2</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
                         <!--<testng outputDir="test-output/html/"/>-->
                     </suiteXmlFiles>
                     <testFailureIgnore>true</testFailureIgnore>
+                    <reuseForks>false</reuseForks>
                     <!--                    add usersystemclassloader for vm crash-->
                     <!--                    <useSystemClassLoader>false</useSystemClassLoader>-->
                     <!--                    关闭并发-->
@@ -79,10 +80,9 @@
 <!--                    <forkCount>2.0C</forkCount>-->
 <!--                    <parallel>methods</parallel>-->
 <!--                    <threadCount>5</threadCount>-->
-                    <argLine>
-                        -Dfile.encoding=UTF-8 -XX:PermSize=256m -XX:MaxPermSize=256m
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
+                    <argLine>-Dfile.encoding=UTF-8 </argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m  </argLine>
+                    <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
 
                     <workingDirectory>${project.build.directory}</workingDirectory>
 
